# time-sheet

./: .gitignore  .gitmodules  Cargo.toml  readme.md
src/: config.rs  latex_generator.rs  latex_string.rs  lib.rs  main.rs  signature.rs  tex_render.rs
src/files/: entry.rs  global.rs  mod.rs  month.rs
src/input/: config.rs  mod.rs  month.rs  sign.rs  signature.rs  working_area.rs
src/input/json_input/: entry.rs  global.rs  month.rs
src/input/scheduler/: absence_scheduler.rs  daily_limiter.rs  default_scheduler.rs  fixed_scheduler.rs  mod.rs  month_scheduler.rs  scheduler_options.rs  task.rs  time_span.rs  work_schedule.rs  workday_scheduler.rs
src/input/strategy/: first_come_first_serve.rs  mod.rs  peekable.rs  proportional.rs  task.rs
src/input/toml_input/: absence.rs  contract.rs  dynamic.rs  entry.rs  entry_key.rs  general.rs  global.rs  holiday.rs  mail.rs  mod.rs  month.rs  repeating_event.rs  transfer.rs
src/input/toml_input/repeating/: custom_end.rs  mod.rs  repeat_span.rs  repeating_event.rs  repeats_every.rs
src/time/: date.rs  holiday.rs  mod.rs  month.rs  time_span.rs  time_stamp.rs  week_day.rs  working_duration.rs  year.rs
src/toml_input/: about.rs  contract.rs  entry.rs  general.rs  global.rs  mod.rs  month.rs  signature.rs
src/utils/: array_vec.rs  iterator.rs  macros.rs  map_entry.rs  mod.rs
src/verifier/: mod.rs  verifier.rs  verify_not_sunday.rs  verify_time.rs  verify_transfer_time.rs
tests/: explicit_values_dynamic.rs  flex_distribution.rs  proportional_distribution.rs  repeating_dynamic.rs  repeating_events_and_absence.rs  transfer_time.rs
tests/common/: mod.rs
