[package]
name = "time-sheet"
version = "0.1.0"
edition = "2021"
authors = ["Luro02"]
description = "A time sheet generator for the german university KIT"

[workspace]
members = ["seahorse"]

[features]
default = ["lettre"]

[dependencies]
# parsing stuff

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"

# utility
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"
tempfile = "3"
rust-embed = "8.0"
fs_extra = "1.3"
v_latexescape = "0.14"
static_assertions = "1.1"
dunce = "1.0"

# can be removed once const-fns panic can have arguments
const_panic = "0.2"

# make backtraces beautiful
color-backtrace = "0.6"

# used for logging
log = "0.4"
pretty_env_logger = "0.5"

# cli
# seahorse = "2.1"
seahorse = { path = "seahorse" }

[dependencies.lettre]
version = "0.11"
default-features = false
features = ["smtp-transport", "pool", "hostname", "builder", "rustls-tls"]
optional = true

[dev-dependencies]
pretty_assertions = "1.4"
time = { version = "0.3", default-features = false }
minreq = { version = "2.11", features = ["https"] }

[profile.release]
strip = "debuginfo"
lto = "fat"
